Add: Command /shop delete <ID>